--- a/src/character_others.tex
+++ b/src/character_others.tex
@@ -4,8 +4,15 @@ Here other main characters will be described that don't have enough information 
 about, but that still play an important role in the Mega Man X saga.
 
 \section{Dr. Cain} \label{char:Cain}
-Dr.~Cain is the brilliant scientist father of reploid's technology. Originally an archaeologist, Dr. Cain accidentally find Dr.~Light's laboratory while searching from prehistoric plant fossils, with X's capsules and blueprints inside~\cite{wiki:Cain_journal}-\cite{elysium_Cain_journal}, whom he befriends with. By using X's help, Dr.~Light's schematics and his knowledge of robotics, Dr. Cain manages to create his own version of a robots with free-will, which he label ``Reploids''. These new type robots greatly impacted on society, almost at the point of becoming necessary, in a very short amount of time and making Dr.~Cain one of the most important person of his world. However although Dr.~Cain's intention were surely good, aiming to achieve the same dream Dr.~Light had to create a society where humans and robots can life together, his actions were also the cause of firsts Maverick attacks~\cite{book:MH_field_guide}. In creating reploids, in fact, Cain didn't manage to fully recreate X's components, especially his ``Distress Circuit''~\cite{book:RMZ_Complete_works} and had to develop substitutes which where however prone to errors. Moreover these reploids' moral ad integrity weren't tested for a period of time as long as X's one, making them more susceptible to taking a wrong path and going Maverick. Dr.~Cain seems partially to acknowledge his error, as after first mavericks appear he tries to find the cause of these problems\footnote{``\textit{This is the third instance of this type of behavior and I still have no idea of what is causing it!}'' - Journal of Dr.~Cain, $16^{th}$ July} develop more advanced reploids with more robust circuits to prevent errors, Sigma being the last of this series\footnote{``\textit{Sigma is one of the most intelligent reploids I've created and contains my latest circuit designs. His systems should be immune to any problems}'' - Journal of Dr.~Cain, $20^{th}$ November}. However even his latest designed circuits didn't manage to keep Sigma safe from going Maverick. Once Sigma begins his assault, Cain remains powerless to watch the destruction his creation caused believing nothing could stop him, not even X or Zero. However he doesn't either stop them for trying, as  he firmly believes something had to be done\footnote{``\textit{ I'm doubtful of their chances ( X and Zero), but I won't stop him. Something has to be done}'', Journal od Dr.~Cain, $4^{th}$ July}.
 
-A different fate is instead reserved to Dr.~Cain's in the series remake, Maverick Haunter X. Here Cain's role remains the same up until Sigma's revolution, with the only difference of being much older and weaker, as he's connected to a life-support machine to extend his life for as much as he can. He's only appearance is in the \emph{Day od $\Sigma$} OVA, where he explain to a pre-revolution Sigma the power X possess and how it manifest in his hesitations and empathy, thus making Sigma interest in him. Cain is then saw only at the end of the OVA, after Sigma declares his war by launching missiles onto Abel city. He is last seen in his house, right before a missiles strikes directly onto it presumably killing him, pondering if reploids, created by humans but with abilities far beyond theirs, were fruit of mankind's arrogance rather than its good intentions and wish for knowledge\footnote{``\textit{Reploids... created by humanity, yet possessing abilities far beyond our own$\dots$ [$\dots$] Mankind's arrogance$\dots$}''-Dr.~Cain, Day of $\Sigma$, scene 4}.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\linewidth]{figures/Characters/Char_Cain_MHX.jpg}
+	\caption{Dr.~Cain as he appears in \emph{Day of $\Sigma$}.}
+\end{figure}
+
+Dr.~Cain is the brilliant scientist father of reploid's technology. Originally an archaeologist, Dr. Cain accidentally find Dr.~Light's laboratory while searching from prehistoric plant fossils, with X's capsules and blueprints inside~\cite{wiki:Cain_journal}-\cite{elysium_Cain_journal}, whom he befriends with. By using X's help, Dr.~Light's schematics and his knowledge of robotics, Dr. Cain manages to create his own version of a robots with free-will, which he label ``Reploids''. These new type robots greatly impacted on society, almost at the point of becoming necessary, in a very short amount of time and making Dr.~Cain one of the most important person of his world. However although Dr.~Cain's intention were surely good, aiming to achieve the same dream Dr.~Light had to create a society where humans and robots can life together, his actions were also the cause of firsts Maverick attacks~\cite{book:MH_field_guide}. In creating reploids, in fact, Cain didn't manage to fully recreate X's components, especially his ``Distress Circuit''~\cite{book:RMZ_Complete_works} and had to develop substitutes which where however prone to errors. Moreover these reploids' moral integrity wasn't tested for a period of time as long as X's one, making them more susceptible to taking a wrong path and going Maverick. Dr.~Cain seems partially to acknowledge his error, as after first mavericks appear he tries to find the cause of these problems\footnote{``\textit{This is the third instance of this type of behavior and I still have no idea of what is causing it!}'' - Journal of Dr.~Cain, $16^{th}$ July} develop more advanced reploids with more robust circuits to prevent errors, Sigma being the last of this series\footnote{``\textit{Sigma is one of the most intelligent reploids I've created and contains my latest circuit designs. His systems should be immune to any problems}'' - Journal of Dr.~Cain, $20^{th}$ November}. However even his latest designed circuits didn't manage to keep Sigma safe from going Maverick. Once Sigma begins his assault, Cain remains powerless to watch the destruction his creation caused believing nothing could stop him, not even X or Zero. However he doesn't either stop them for trying, as  he firmly believes something had to be done\footnote{``\textit{ I'm doubtful of their chances ( X and Zero), but I won't stop him. Something has to be done}'', Journal od Dr.~Cain, $4^{th}$ July}.
+
+A different fate is instead reserved to Dr.~Cain's in the series remake, Maverick Haunter X. Here Cain's role remains the same up until Sigma's revolution, with the only difference of being much older and weaker, as he's connected to a life-support machine to extend his life for as much as he can. He's only appearance is in the \emph{Day od $\Sigma$} OVA, where he explain to a pre-revolution Sigma the power X possess and how it manifest in his hesitations and empathy, thus making Sigma interest in him. Cain is then saw only at the end of the OVA, after Sigma declares his war by launching missiles onto Abel city. He is last seen in his house, right before a missiles strikes directly onto it presumably killing him, pondering if reploids, created by humans but with abilities far beyond theirs, were fruit of mankind's arrogance rather than its good intentions and wish for knowledge\footnote{``\textit{Reploids... created by humanity, yet possessing abilities far beyond our own$\dots$ [$\dots$] Mankind's arrogance?$\dots$No}''-Dr.~Cain, Day of $\Sigma$, scene 4}.
 
 %FROM HERE X2
