--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -1,57 +1,60 @@
 %enemies.tex
+Here a list of all enemies with a short description is given. For the X1 enemies information are obtainable from \cite{wayback:X_resources}, while artworks comes from \cite{book:MMX_Complete_art}.
+
 \section{Mini-Bosses}
 	\begin{itemize}
 		\item \hypertarget{miniboss:Anglerge}{\textbf{Anglerge}}:
-		Anglerge are angler-type mechaniloids that work to cleaning the seabed floor, with a  a motion sensor attached to its "lantern" part ~\cite{wayback:X_resources}. Anglerge's attack are only four: send four snake-like robots toward X (two upward and two downward), which travel horizontally and descend when above (or below) X; a vacuum attack to push or pull X toward a spike pit; a (rare) energy beam from the angler (which can be disabled if the lamp is broken via an attack).
+		Anglerge are angler-type mechaniloids that work to cleaning the seabed floor, with a  a motion sensor attached to its "lantern" part. Anglerge's attack are only four: send four snake-like robots toward X (two upward and two downward), which travel horizontally and descend when above (or below) X; a vacuum attack to push or pull X toward a spike pit; a (rare) energy beam from the angler (which can be disabled if the lamp is broken via an attack).
 		\begin{figure}[htp]
 			\centering
-			\includegraphics[width=0.5\linewidth]{figures/X1/Enemies/Anglerge.jpg}
+			\includegraphics[width=0.4\linewidth]{figures/X1/Enemies/Anglerge.jpg}
 			\caption{Anglerge's artwork}
 		\end{figure}
 	
 		\item \hypertarget{miniboss:Bee_Blader}{\textbf{Bee Blader}}:
-		A large bee-type helicopter which was created in order to carry Ball de Voux. It is equipped with a vulcan machine-gun and homing missiles. This mechaniloid has been created for guerrilla operations in forests and cities~\cite{wayback:X_resources}. While they don't appears formidable enemies, they can be rather dangerous, especially if X defeats them while standing below, as they will fall and crush him instantly.
+		A large bee-type helicopter which was created in order to carry \hyperlink{enem:Ball_De_Voux}{Ball de Voux}. It is equipped with a vulcan machine-gun and homing missiles. This mechaniloid has been created for guerrilla operations in forests and cities. While they don't appears formidable enemies, they can be rather dangerous, especially if X defeats them while standing below, as they will fall and crush him instantly.
 		\begin{figure}[htp]
 			\centering
-			\includegraphics[width=0.6\linewidth]{figures/X1/Enemies/BeeBlader.jpg}
+			\includegraphics[width=0.5\linewidth]{figures/X1/Enemies/BeeBlader.jpg}
 			\caption{Bee Blader's artwork}
 		\end{figure}
 	
 		\item
-		 \hypertarget{enem:Cruiziler}{\textbf{Cruiziler}}: Whale mechaniloid who patrols the sea with its powerful weapon. Some kind of mistake caused it to lose its sea navigation, its attack circuits began running wild, and communications were lost~\cite{wayback:X_resources}. Its body is totally invincible, save for its core on top.
+		 \hypertarget{miniboss:Cruiziler}{\textbf{Cruiziler}}: Whale mechaniloid who patrols the sea with its powerful weapon. Some kind of mistake caused it to lose its sea navigation, its attack circuits began running wild, and communications were lost. Its body is totally invincible, save for its core on top.
 		\begin{figure}[htp]
 			\centering
-			\includegraphics[width=0.6\linewidth]{figures/X1/Enemies/Cruiziller.jpg}
+			\includegraphics[width=0.4\linewidth]{figures/X1/Enemies/Cruiziller.jpg}
 			\caption{Cruiziller's artwork}
+		\end{figure}
+		
+		\begin{figure}[htp]
+		\centering
+		\includegraphics[width=0.3\linewidth]{figures/X1/Enemies/MoleBorer.jpg}
+		\caption{Mole Borer's artwork}
 		\end{figure}
 	
 		\item \hypertarget{miniboss:Mole_Borer}{\textbf{Mole Borer}}:
-		Mechaniroid used to open up paths in mines, using a 
-		rotary roller to destroy rocks that obstacle his path~\cite{wayback:X_resources}. Its armoring can take a lot of damage, while the roller is completely invincible and can instantly kill X.
-		\begin{figure}[htp]
-			\centering
-			\includegraphics[width=0.4\linewidth]{figures/X1/Enemies/MoleBorer.jpg}
-			\caption{Mole Borer's artwork}
-		\end{figure}
+		Mechanioid used to open up paths in mines, using a 
+		rotary roller to destroy rocks that obstacle his path. Its armoring can take a lot of damage, while the roller is completely invincible and can instantly kill X. The only way to deal with it is to attack from behind, although several shots are needed to take it down. Using the Fire Wave is the best option, as its continuous damage can dispose of it quickly.
 	
-		\item \hypertarget{miniboss:RT-55J}{\textbf{RT-55J}}: In times of peace, it was a professional robot sumo wrestler and a popular Yokozuna (sumo grand champion) in the "Robot Grand Sumo Tournament". In the forest, it now guard X's  Chest Parts~\cite{wayback:X_resources}. Its certain kill technique, the "Kagizume Beam Hand," strikes and tosses its opponents but only if it is in his claw's reach range. Otherwise he'll just jump at it to close the gap.
+		\item \hypertarget{miniboss:RT-55J}{\textbf{RT-55J}}: In times of peace, it was a professional robot sumo wrestler and a popular Yokozuna (sumo grand champion) in the "Robot Grand Sumo Tournament". Moved in the forest, it now guards X's  Chest Parts. Its certain kill technique, the "Kagizume Beam Hand," strikes and tosses its opponents but only if it is in his claw's reach range. Otherwise he'll just jump at it to close the gap. 
 		\begin{figure}[htp]
 			\centering
-			\includegraphics[width=0.4\linewidth]{figures/X1/Enemies/RT-55J.jpg}
+			\includegraphics[width=0.3\linewidth]{figures/X1/Enemies/RT-55J.jpg}
 			\caption{RT-55J's artwork}
 		\end{figure}
 	
-		\item \hypertarget{miniboss:Thunder_Slimer}{\textbf{Thunder Slimer}}: Thunder Slimer was born from a single question: ``How large can a single cell become?'' This monster was born from said experiment. Its body is over three times as large as X, but may require approximately 10 years before it reaches full growth~\cite{wayback:X_resources}. It has settled in the power plant, where he absorb electricity and use it to perform electric attack against X.
+		\item \hypertarget{miniboss:Thunder_Slimer}{\textbf{Thunder Slimer}}: Thunder Slimer was born from a single question: ``How large can a single cell become?'' This monster was born from said experiment. Its body is over three times as large as X, but may require approximately 10 years before it reaches full growth. It has settled in the power plant, where he absorb electricity and use it to perform electric attack against X.
 		\begin{figure}[htp]
 			\centering
-			\includegraphics[width=0.4\linewidth]{figures/X1/Enemies/ThunderSlimer.jpg}
+			\includegraphics[width=0.3\linewidth]{figures/X1/Enemies/ThunderSlimer.jpg}
 			\caption{Thunder Slimer's artwork}
 		\end{figure}
 	
-		\item \hypertarget{miniboss:Utuboros}{\textbf{Utuboros}}: Serpent-type mechaniloid made to explore the ocean floor. Thanks to its flexible body it can zig-zag into difficult underwater areas, and burrow underground ~\cite{wayback:X_resources}. His body is totally invincible and can work as a platform, while only the head and tail are vulnerable and can damage X.
+		\item \hypertarget{miniboss:Utuboros}{\textbf{Utuboros}}: Serpent-type mechaniloid made to explore the ocean floor. Thanks to its flexible body it can zig-zag into difficult underwater areas, and burrow underground. His body is totally invincible and can work as a platform, while only the head and tail are vulnerable and can damage X.
 		\begin{figure}[htp]
 			\centering
-			\includegraphics[width=0.5\linewidth]{figures/X1/Enemies/Utuboros.jpg}
+			\includegraphics[width=0.4\linewidth]{figures/X1/Enemies/Utuboros.jpg}
 			\caption{Utuboros's artwork}
 		\end{figure}
 	\end{itemize}
@@ -72,13 +75,13 @@
 	
 	\item[{\includegraphics{figures/X1/Enemies/sprite_battonbone.png}}] \hypertarget{enem:Batton_Bone}{\textbf{Batton Bone}}: Bat mechaniloids with a taste for humans. They dwell in forests and caves.
 	
-	\item[{\includegraphics[height=15px]{figures/X1/Enemies/sprite_battonm501.png}}]  \hypertarget{enem:Batton_M-501}{\textbf{Batton M-501}}: Bat type mechaniloid which the Batton Bone series is based on. It is a very unusual mechaniloid, made over 30 years ago. 
+	\item[{\includegraphics[height=15px]{figures/X1/Enemies/sprite_battonm501.png}}]  \hypertarget{enem:Batton_M-501}{\textbf{Batton M-501}}: Bat type mechaniloid which the \hyperlink{enem:Batton_Bone}{Batton Bone} series is based on. It is a very unusual mechaniloid, made over 30 years ago. 
 	
 	\item[{\includegraphics{figures/X1/Enemies/sprite_bombeen.png}}]\hypertarget{enem:Bomb_Been}{\textbf{Bomb Been}}: Small bee-modeled helicopter used for land mines scattering. Able to infiltrate any area, it can set up land mines anywhere.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_cragman.png}}] \hypertarget{enem:Crag_Man} {\textbf{Crag Man}}: Crag Men were made to clear rock debris during landslides. They works actively with the aerial mechanilid Sky Claw.
+	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_cragman.png}}] \hypertarget{enem:Crag_Man} {\textbf{Crag Man}}: Crag Men were made to clear rock debris during landslides. They works actively with the aerial mechaniloid \hyperlink{enem:Sky_Claw}{Sky Claw}.
 	
-	\item[{\includegraphics[height=10px]{figures/X1/Enemies/sprite_creeper.png}}] \hypertarget{enem:Creeper} {\textbf{Creeper}}: An insect-type mechaniloid. It's unknown what it was made for.	It is pecked out from the insides of trees by the Mad Pecker.
+	\item[{\includegraphics[height=10px]{figures/X1/Enemies/sprite_creeper.png}}] \hypertarget{enem:Creeper} {\textbf{Creeper}}: An insect-type mechaniloid. It's unknown what it was made for.	It is pecked out from the insides of trees by the \hyperlink{enem:Mad_Pecker}{Mad Pecker}.
 	
 	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_crusher.png}}] \hypertarget{enem:Crusher}{\textbf{Crusher}}: Construction mechaniloid used for knocking down buildings. It drops its steel-made weight to scrape down the highway.
 	
@@ -104,7 +107,7 @@
 	
 	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_liftcannon.png}}] \hypertarget{enem:Lift_Cannon}{\textbf{Lift Cannon}}: Rotary-type cannon attached to a a tube-like stand. Originally, a fire-fighting robot for control towers and any other high places in the airport.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_madpecker.png}}] \hypertarget{enem:Mad_Pecker}{\textbf{Mad Pecker}}: Woodpecker-type repliroid who chops trees in the forest. Tries to follow Planty, without success.
+	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_madpecker.png}}] \hypertarget{enem:Mad_Pecker}{\textbf{Mad Pecker}}: Woodpecker-type repliroid who chops trees in the forest. Tries to follow \hyperlink{enem:Planty_Iworms}{Planty}, without success.
 	
 	\item[{\includegraphics[width=30px]{figures/X1/Enemies/sprite_megatortoise.png}}] \hypertarget{enem:Mega_Tortoise}{\textbf{Mega Tortoise}}: A turtle-type mechaniloid originally meant for rescuing humans from maritime disasters. From its back, it now produces bombs in place of floating devices.
 	
