--- a/src/timeline.tex
+++ b/src/timeline.tex
@@ -5,19 +5,27 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 }}
 
 \begin{tabularx}{\linewidth}{l X}
+	
 	\toprule
 	\rowcolor{Aquamarine}
+	%
+	% 20XX
+	%
 	\multicolumn{2}{c}{\textbf{20XX}}\\
 	\addlinespace[1.5ex]
      \tabdot&29$^{th}$ March 20XX: Dr.~Thomas Light begins pondering the idea of a robot capable of choosing his own path in life. \\
    	 \tabdot& Dr.~Light begins to construct X.\\
    	 \tabdot& Dr.~Light finishes to build X, but seals him away in a capsule which can run the thirty-year required tests in autonomy. He than leaves a warning message for whoever will find X.\\
    	 \tabdot& Dr.~Light dies. His consciousness, however, lives on inside and AI which continue to work on the X project developing the First Armor.\\
-	
+	\tabdot&The Batton M-501 mechaniloid series is discontinued, in favor of the newer Batton Bone one.\\
+	%
+	% 21XX
+	%
 	\midrule
 	\rowcolor{Aquamarine}
 	\multicolumn{2}{c}{\textbf{21XX}}\\
 	\addlinespace[1.5ex]
+	\tabdot& The Met series is upgraded with the introduction of Metall C-15.\\
 	\tabdot&10$^{th}$ April 21XX: Dr.~Cain accidentally finds Dr.~Light's laboratory buried underground while in a archaeological expedition.\\
 	\tabdot&13$^{th}$ April 21XX: Dr.~Cain finds X's capsule.\\ 
 	\tabdot& 14$^{th} $April 21XX: X awakens.\\
@@ -27,30 +35,32 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabdot& The first instance of a reploid going maverick occurs.\\
 	\tabdot& Cain creates Sigma, a strong reploid equipped with last-design brain circuits.\\
 	\tabdot& 20$^{th}$ November 21XX: The Council decides to set up a special organization, named ``Maverick Haunters'' with the specific task to haunt down and stop mavericks. Sigma is appointed as the leader.\\
-	\tabdot& Sigma is appointed leader of the 17th Elite unit.\\
-	\tabdot& Launch Octopus joins the 6th Fleet.\\
-	\tabdot& Chill Penguin joins the 13th Polar Division, stationed in the South Pole.\\
-	\tabdot& Armored Armadillo is appointed commander of the 8th armored force.\\
-	\tabdot & Flame Mammoth became captain of the 4th Land Unit stationed in the Middle East.\\
-	\tabdot& Storm Eagle becomes leader of the 7th Airborne Unit.\\
-	\tabdot& Boomer Kuwanger and Spark Mandrill join the 17th Elite Unit.\\
-	\tabdot& Sting Chameleon is assigned to the 9th Special Force (Ranger Unit).\\
-	\tabdot& Vile joins the 17th Elite Unit\footnote{Here the fact that all mavericks joins the organization from the beginning is only author's flavor as no information about these events are given}.\\
+	\tabline& Sigma is appointed leader of the 17th Elite unit.\\
+	\tabline& Launch Octopus joins the 6th Fleet.\\
+	\tabline& Chill Penguin joins the 13th Polar Division, stationed in the South Pole.\\
+	\tabline& Armored Armadillo is appointed commander of the 8th armored force.\\
+	\tabline& Flame Mammoth became captain of the 4th Land Unit stationed in the Middle East.\\
+	\tabline& Storm Eagle becomes leader of the 7th Airborne Unit.\\
+	\tabline& Boomer Kuwanger and Spark Mandrill join the 17th Elite Unit.\\
+	\tabline& Sting Chameleon is assigned to the 9th Special Force (Ranger Unit).\\
+	\tabline& Vile joins the 17th Elite Unit\footnote{Here the fact that all mavericks joins the organization from the beginning is only author's flavor as no information about these events are given}.\\
 	\tabdot& 10$^{th}$ December 21XX: Maverick Haunter have been operating for about two years. X is still seeking his place in life.\\
-	\tabdot& Zero joins the 17th Elite Unit\footnote{More details in future}.\\
+	\tabdot& Zero joins the 17th Elite Unit\\
 	\tabdot& X joins the 17th Elite Unit.\\
 	\tabdot& Sigma begins to actuate his plans.\\
 	\tabdot& A fault in Vile's brain circuit makes him unstable and borderline-maverick. The high ranks of the Maverick Haunter decides to jail him waiting for a judgment.\\
 	\tabdot& Sigma calls back Chill Penguin from the South Pole, making him join temporary the 17th Elite unit. Before coming back, Chill Penguin eliminates his former superior.\\
 	\tabdot& Flame Mammoth is recalled too, but he doesn't join the 17th Elite Unit.\\
-	
+	%
+	% day of sigma
+	%
 	\midrule
 	\rowcolor{Aquamarine}
 	\multicolumn{2}{c}{\textbf{Day of $\Sigma$ and beginning of the war}}\\
 	\addlinespace[1.5ex]
-	\tabdot& Vile is finally arrested.\\
+	\tabdot& Vile is arrested, suspected of being a maverick.\\
 	\tabdot& Sigma frees Vile, asking him to take care of X.\\
-	\tabdot& 4$^{th}$ July 20XX: Sigma attacks a missile base. X and Zero try to stop him, but they fail. Sigma fires missile onto Abel City, effectively starting the war.\\
+	\tabdot& 4$^{th}$ July 20XX: Sigma attacks a missile base. X and Zero try to stop him, but they fail. Sigma fires missile onto Abel City, effectively starting the war. During the fight X hit Sigma, causing him scars onto his eyes.\\
 	\tabdot& Storm Eagle and his troops attack Sigma, trying to take him down. Sigma wins, putting him under his rule. Storm Eagle is than entrusted with the control of the Death Rogumer.\\
 	\tabdot& Sigma's subordinate conquer various strategical points.\\
 	\tabline& Launch Octopus set up a base in the ocean, to cut down naval transports.\\
@@ -64,12 +74,26 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabline& Rangda Bangda is created to crush enemies who enter Sigma's fortress.\\
 	\tabline& Scientists begin the construction of a giant dinosaur-based mechaniloid and a wolf-based mechaniloid capable to combine with Sigma to further enhance his power.\\
 	\tabdot& Zero is appointed as leader of the 17th Elite unit and of the entire Haunter organization, being the highest in rank remained to oppose Sigma.\\
+	%
+	% X1
+	%
 	\midrule
 	\rowcolor{Aquamarine}
 	\multicolumn{2}{c}{\textbf{Mega Man X}}\\
 	\addlinespace[1.5ex]
 	\tabdot& Sigma's troop launch an attack on Abel city's highway. X intervenes to stop the fight.\\
+	\tabline& Vile attack X on the highway, but Zero intervention forces him to retreat. In the battle his ride armor is damaged.\\
 	\tabdot& Zero entrusts X with dealing with the eight mavericks. Meanwhile he starts searching for Sigma's hideout.\\
-	 
-		
+	\tabdot& X manages to defeat all eight mavericks that were threatening Abel city. In the meanwhile he also find capsules from which Dr.~Light AI gives him first armor pieces, now completed.\\
+	\tabdot& Vile repairs and upgrades his ride armor, while also setting up a plan to take down both Zero and X.\\
+	\tabline& Sigma recover defeated mavericks' dead bodies and resurrect them as an additional line of defense for his fortress.\\
+	\tabdot& Zero finds Sigma's hideout, and ask X to reach him to begin the final assault.\\
+	\tabdot& X and Zero enter Sigma's fortress but are ambushed by Vile, which capture both of them. However both Zero and X manage to break free from their prison and to take down Vile. Zero, however, dies in the fight too.\\
+	\tabdot& X continue traveling through the fortress. Scientists, worried, accelerate the development of the tyrannosaurus mechaniloid mounting its head onto a moving platform, thus creating D-REX, which is however destroyed by X.\\
+	\tabdot& Sigma manages to separate his mind from the body. His mind flee, while his original body remains back to fight X.\\
+	\tabdot& X finally reaches Sigma, and the two fight. X defeat Velguarder first and Sigma immediately after. Sigma decides than to combine himself with the still incomplete wolf-mechaniloid built for him and became Wolf Sigma. X, however, manages to destroy him again. After Sigma's defeat, his fortress began to collapse and falls into the ocean. X teleport outside.\\
+ 	\midrule
+ 	%
+ 	% X1 - X2
+ 	%
 \end{tabularx}
