--- a/src/timeline.tex
+++ b/src/timeline.tex
@@ -29,7 +29,7 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabdot&10$^{th}$ April 21XX: Dr.~Cain accidentally finds Dr.~Light's laboratory buried underground while in a archaeological expedition.\\
 	\tabdot&13$^{th}$ April 21XX: Dr.~Cain finds X's capsule.\\ 
 	\tabdot& 14$^{th} $April 21XX: X awakens.\\
-	\tabdot& 15$^{th}$ April 21XX: Dr.~Cain, alongside X and Light's schematics moves to his laboratory, in order to try create a new type of robot following Dr.~Light's designs.\\
+	\tabdot& 15$^{th}$ April 21XX: Dr.~Cain, alongside X and Light's schematics, moves to his laboratory in order to try create a new type of robot following Dr.~Light's designs.\\
 	\tabdot& 22$^{nd}$ November 21XX: Dr.~Cain complete his first reploid.\\
 	\tabdot& Cain Industries begins reploids' mass production.\\
 	\tabdot& The first instance of a reploid going maverick occurs.\\
@@ -39,7 +39,7 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabline& Launch Octopus joins the 6th Fleet.\\
 	\tabline& Chill Penguin joins the 13th Polar Division, stationed in the South Pole.\\
 	\tabline& Armored Armadillo is appointed commander of the 8th armored force.\\
-	\tabline& Flame Mammoth became captain of the 4th Land Unit stationed in the Middle East.\\
+	\tabline& Flame Mammoth becomes captain of the 4th Land Unit stationed in the Middle East.\\
 	\tabline& Storm Eagle becomes leader of the 7th Airborne Unit.\\
 	\tabline& Boomer Kuwanger and Spark Mandrill join the 17th Elite Unit.\\
 	\tabline& Sting Chameleon is assigned to the 9th Special Force (Ranger Unit).\\
@@ -50,7 +50,7 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabdot& Sigma begins to actuate his plans.\\
 	\tabdot& A fault in Vile's brain circuit makes him unstable and borderline-maverick. The high ranks of the Maverick Haunter decides to jail him waiting for a judgment.\\
 	\tabdot& Sigma calls back Chill Penguin from the South Pole, making him join temporary the 17th Elite unit. Before coming back, Chill Penguin eliminates his former superior.\\
-	\tabdot& Flame Mammoth is recalled too, but he doesn't join the 17th Elite Unit.\\
+	\tabline& Flame Mammoth is recalled too, but he doesn't join the 17th Elite Unit.\\
 	%
 	% day of sigma
 	%
@@ -63,13 +63,13 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\tabdot& 4$^{th}$ July 20XX: Sigma attacks a missile base. X and Zero try to stop him, but they fail. Sigma fires missile onto Abel City, effectively starting the war. During the fight X hit Sigma, causing him scars onto his eyes.\\
 	\tabdot& Storm Eagle and his troops attack Sigma, trying to take him down. Sigma wins, putting him under his rule. Storm Eagle is than entrusted with the control of the Death Rogumer.\\
 	\tabdot& Sigma's subordinate conquer various strategical points.\\
-	\tabline& Launch Octopus set up a base in the ocean, to cut down naval transports.\\
+	\tabline& Launch Octopus sets up a base in the ocean, to cut down naval transports.\\
 	\tabline& Chill Penguin occupies a base in a nearby mountain to cause avalanches on the city.\\
 	\tabline& Flame Mammoth occupies a factory and convert it for mass producing weapon needed for the war. However none of his subordinates follow him due his bad attitude as commander.\\
-	\tabline& Boomer Kuwanger capture the tower symbol of Abel city.\\
+	\tabline& Boomer Kuwanger captures the tower symbol of Abel city.\\
 	\tabline& Spark Mandrill seizes the power plant, to redirect electricity onto Sigma's facility.\\
-	\tabline& Sting Chameleon occupy a front-line bases set inside the forest.\\
-	\tabdot& Sigma set up his fortress where he leads operations.\\
+	\tabline& Sting Chameleon occupies a front-line bases set inside the forest.\\
+	\tabdot& Sigma sets up his fortress where he leads operations.\\
 	\tabline& Scientists create Bospider to be a large-scale crusher with an invincible body, but a mistake causes its core to exposed after a shock. Sigma decides to use it as guardian to his fortress.\\
 	\tabline& Rangda Bangda is created to crush enemies who enter Sigma's fortress.\\
 	\tabline& Scientists begin the construction of a giant dinosaur-based mechaniloid and a wolf-based mechaniloid capable to combine with Sigma to further enhance his power.\\
@@ -81,17 +81,17 @@ Here a timeline of all events concerning the Mega Man X series in chronological 
 	\rowcolor{Aquamarine}
 	\multicolumn{2}{c}{\textbf{Mega Man X}}\\
 	\addlinespace[1.5ex]
-	\tabdot& Sigma's troop launch an attack on Abel city's highway. X intervenes to stop the fight.\\
-	\tabline& Vile attack X on the highway, but Zero intervention forces him to retreat. In the battle his ride armor is damaged.\\
+	\tabdot& Sigma's troops launch an attack on Abel city's highway. X intervenes to stop the fight.\\
+	\tabline& Vile attacks X on the highway, but Zero's intervention forces him to retreat. In the battle his ride armor is damaged.\\
 	\tabdot& Zero entrusts X with dealing with the eight mavericks. Meanwhile he starts searching for Sigma's hideout.\\
 	\tabdot& X manages to defeat all eight mavericks that were threatening Abel city. In the meanwhile he also find capsules from which Dr.~Light AI gives him first armor pieces, now completed.\\
 	\tabdot& Vile repairs and upgrades his ride armor, while also setting up a plan to take down both Zero and X.\\
-	\tabline& Sigma recover defeated mavericks' dead bodies and resurrect them as an additional line of defense for his fortress.\\
+	\tabline& Sigma recovers defeated mavericks' dead bodies and resurrect them as an additional line of defense for his fortress.\\
 	\tabdot& Zero finds Sigma's hideout, and ask X to reach him to begin the final assault.\\
-	\tabdot& X and Zero enter Sigma's fortress but are ambushed by Vile, which capture both of them. However both Zero and X manage to break free from their prison and to take down Vile. Zero, however, dies in the fight too.\\
-	\tabdot& X continue traveling through the fortress. Scientists, worried, accelerate the development of the tyrannosaurus mechaniloid mounting its head onto a moving platform, thus creating D-REX, which is however destroyed by X.\\
+	\tabdot& X and Zero enter Sigma's fortress but are ambushed by Vile, which captures both of them. However both Zero and X manage to break free from their prison and to take down Vile. Zero, however, dies in the fight too.\\
+	\tabdot& X continues traveling through the fortress. Scientists, worried, accelerate the development of the tyrannosaurus mechaniloid mounting its head onto a moving platform, thus creating D-REX, which is however destroyed by X.\\
 	\tabdot& Sigma manages to separate his mind from the body. His mind flee, while his original body remains back to fight X.\\
-	\tabdot& X finally reaches Sigma, and the two fight. X defeat Velguarder first and Sigma immediately after. Sigma decides than to combine himself with the still incomplete wolf-mechaniloid built for him and became Wolf Sigma. X, however, manages to destroy him again. After Sigma's defeat, his fortress began to collapse and falls into the ocean. X teleport outside.\\
+	\tabdot& X finally reaches Sigma, and the two fight. X defeats Velguarder first and Sigma immediately after. Sigma decides than to combine himself with the still incomplete wolf-mechaniloid built for him and became Wolf Sigma. X, however, manages to destroy him again. After Sigma's defeat, his fortress began to collapse and falls into the ocean. X teleports outside.\\
  	\midrule
  	%
  	% X1 - X2
