--- a/MMX_Compendium.tex
+++ b/MMX_Compendium.tex
@@ -25,7 +25,7 @@
 \newcommand{\x}{\textit{X1}\xspace}
 \newcommand{\mhx}{\textit{MHX}\xspace}
 \newcommand{\PtIIWarning}{Part \ref{assumptions} preface}
-
+\newcommand{\portraitsize}{5cm}
 \hypersetup{
 	colorlinks=true,
 	linkcolor=blue,
@@ -83,11 +83,11 @@
 	
 \chapter{Mega Man X}
 \label{cha:X1}
-	\input{src/x1.tex}
+%	\input{src/x1.tex}
 
 \chapter[Mega Man X2]{Mega Man X2\\[2ex]\Large\itshape{VS X-Hunters}}
 \label{cha:X2}
-%	\input{src/x2.tex}
+	\input{src/x2.tex}
 	
 \chapter{Mega Man X3}
 	\label{cha:X3}
@@ -135,7 +135,7 @@
 %\input{src/timeline}
 
 \chapter{Damage Tables}
-%\input{src/tables}
+\input{src/tables}
 
 \bibliographystyle{IEEEtran} 
 \bibliography{bibliography}
