--- a/bibliography.bib
+++ b/bibliography.bib
@@ -130,6 +130,12 @@
 	url={http://web.archive.org/web/20031009010437/http://megaman.retrofaction.com/mmx/resources/x2sb1.txt}
 }
 
+@online{wayback:X3_resources,
+	title={{Rockman X3 Collected Sourcebook Information}},
+	author={{Wayback Machine}},
+	url={http://web.archive.org/web/20030820110538/http://megaman.retrofaction.com/mmx/resources/x3sb1.txt}
+}
+
 -------- WIKI------------
 @online{wiki:MMX,
 	title={{Mega Man X (video game)}},
@@ -169,14 +175,7 @@
 	}
 }
 
-
------------------------------Scripts-----------------------------
-@online{wiki:MMX_script,
-	title={{Mega Man X2}},
-	author={{Wikipedia}},
-	url={https://megaman.fandom.com/wiki/Mega_Man_X_(video_game)/Script}
-}
-
+------------------------------Collections------------------------
 @online{Xcoll1:Manual_X1,
 	title={{Megaman X legacy collection 1}},
 	author={{Megaman X Gallery}}
@@ -185,6 +184,19 @@
 @online{Xcoll1:Manual_X2,
 	title={{Megaman X legacy collection 1}},
 	author={{Megaman X2 Gallery}}
+}
+
+@online{Xcoll1:Manual_X3,
+	title={{Megaman X legacy collection 1}},
+	author={{Megaman X3 Gallery}}
+}
+
+
+-----------------------------Scripts-----------------------------
+@online{wiki:MMX_script,
+	title={{Mega Man X2}},
+	author={{Wikipedia}},
+	url={https://megaman.fandom.com/wiki/Mega_Man_X_(video_game)/Script}
 }
 
 @online{wiki:MM_MHX_script,
@@ -637,6 +649,7 @@
 	author={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Deep-Sea_Base_Stage}
 }
+
 @online{wiki:Sea_Canthller,
 	title={{Sea Canthller}},
 	author={{The Megaman Knowledge Base}},
@@ -686,21 +699,25 @@
 	author={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Violen}
 }
+
 @online{wiki:Serges,
 	title={{Serges}},
 	author={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Serges}
 }
+
 @online{wiki:Agile,
 	title={{Agile}},
 	author={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Agile}
 }
+
 @online{wiki:Zero_X2,
 	title={{Zero/Mega Man X2}},
 	author={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Zero/Mega_Man_X2}
 }
+
 @online{wiki:Neo_sigma,
 	title={{Sigma/Mega Man X2}},
 	author={{The Megaman Knowledge Base}},
@@ -719,6 +736,7 @@
 	author={{Sharivan X}},
 	url={https://www.youtube.com/watch?v=qE2ozDjXxvI}
 }
+
 @online{video:triple_glitch,
 	title={{Megaman X2 - Triple Neon Glitch (Magna Centipede Concept Fight)
 	}},
@@ -730,4 +748,86 @@
 	author={{The Megaman Knowledge Base}},
 	title={{List of Mega Man X enemies}},
 	url={https://megaman.fandom.com/wiki/List_of_Mega_Man_X2_enemies}
+}
+
+----------------------------- X3 -----------------------------
+
+@online{X3:Manual,
+	title={{Mega Man X3 Instruction Manual}},
+	author={{Nintendo, Capcom}},
+	url={https://www.retrogames.cz/manualy/SNES/Mega_Man_X3_-_SNES_-_Manual.pdf}
+}
+
+@misc{X3:enem_drop_gfaqs,
+	author={{Phexar}},
+	editor={{GamesFAQs}},
+	title={{Frost Shield \& Acid Burst - list of enemies to use them on for health/energy}},
+	url={https://gamefaqs.gamespot.com/boards/588481-mega-man-x3/76972644}
+}
+
+@online{wiki:third_armor,
+	title={{
+	Armor Parts (Mega Man X3)}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Armor_Parts_(Mega_Man_X3)}
+}
+
+@online{wiki:Zero_change,
+	title={{Zero Change}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Zero_Change}
+}
+
+@online{wiki:Zero_change,
+	title={{Zero Change}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Zero_Change}
+}
+
+@online{wiki:Chimera_Armor,
+	title={{Chimera}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Chimera}
+}
+
+@online{wiki:X3_opening,
+	title={{Hunter Base}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Hunter_Base#Mega_Man_X3}
+}
+
+@online{wiki:Weapons_factory,
+	title={{Weapons Factory Stage}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Weapons_Factory_Stage}
+}
+
+@online{wiki:Blast_hornet,
+	title={{Blast Hornet}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Blast_Hornet}
+}
+
+@online{wiki:Frozen_Town,
+	title={{Frozen Town Stage}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Frozen_Town_Stage}
+}
+
+@online{wiki:Blizzard_buffale,
+	title={{Blizzard Buffalo}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Blizzard_Buffalo}
+}
+
+@online{wiki:Airborne_carrier,
+	title={{Airborne Aircraft Carrier Stage}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Airborne_Aircraft_Carrier_Stage}
+}
+
+@online{wiki:Gravity_beetle,
+	title={{Gravity Beetle}},
+	author={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Gravity_Beetle}
 }
