--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -46,6 +46,9 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 
 	\item \hypertarget{miniboss:Genjibo}{\textbf{Genjibo}} 
 	
+	\item 
+	\hypertarget{miniboss:Hotareeca}{\textbf{Hotareeca}}
+	
 	\item \hypertarget{miniboss:Magna_Quartz}{\textbf{Magna Quartz}}
 	\enemSpecs{20 (~0.97 seconds of Iframes, weak to silk shot)}{2 (contact with laser shooters), 2 (laser), 3 (contact with crystal)}{An unknown mechaniroid, embedded in a giant crystal. Attacks using 2 invincible support mechas, which fire reflecting lasers. Its true form inside the crystal is its weakness.}
 	\begin{figure}[htp]
@@ -134,11 +137,9 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 \end{itemize}
 
 
-
-
-
 \section{Minor enemies}
 \begin{itemize}
+		
 	\item[{\includegraphics[height=30px]{figures/X2/Enemies/sprite_aclanda.png}}] \hypertarget{enem:Aclanda}{\textbf{Aclanda}}:
 	\enemSpecs{16, weak to Silk Shot, Spin Wheel and Magent Mine}{2 (grenades), 3 (laser), 4 (contact)}{Immobile artillery shaped like a scorpion, built by the X-Hunters to intercept the Maverick Hunters.}
 	
@@ -230,7 +231,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	
 	\item \hypertarget{enem:Drimole-W }{\textbf{Drimole-W} }%TODO ---------------------------------------------
 
-	\item \hypertarget{enem:Earth_Commander}{Earth Commander}
+	\item \hypertarget{enem:Earth_Commander}{\textbf{Earth Commander}}%TODO ---------------------------------------------
 	
 	\item[{\includegraphics[height=15px]{figures/X2/Enemies/sprite_Fishern.png}}] \hypertarget {enem:Fishern}{\textbf{Fishern}}:
 	\enemSpecs{1}{1 (contact)}{Formerly a mechaniloid for feeding cultivated fish. After being remodeled, it breaks everything in sight.}
@@ -266,14 +267,17 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\item \hypertarget{enem:Head_Gunner_customer}{\textbf{Head Gunner customer}} %TODO ---------------------------------------------
 	\item \hypertarget{enem:Head_Gunner_masspro}{\textbf{Head Gunner masspro}}%TODO ---------------------------------------------
 	
-	\hyperlink{enem:Helit}{\textbf{Helit}}
-	
+	\item \hypertarget{enem:Helit}{\textbf{Helit}}%TODO ---------------------------------------------
 	
 	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_hoganmer.png}}] \hypertarget{enem:Hoganmer}{\textbf{Hoganmer}}:
 	\enemSpecs{8}{3 (contact), 2(spike ball)}{Fighter in the future grappling show "Robot Coliseum." It blocks the attacks of enemies with its shield, and attacks	by swinging its iron ball and chain.}
 	
 	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_hotarion.png}}] \hypertarget{enem:Hotarion}{\textbf{Hotarion}}:
 	\enemSpecs{1}{2 (contact)}{A mechaniloid for nighttime patrol, it was made to save the firefly appearance from extinction. Shining, it flies through the sky.}
+	
+	
+	\item \hypertarget{enem:Ice_De_Voux}{\textbf{Ice De Voux}}  %TODO ---------------------------------------------
+	
 	
 	\item[{\includegraphics[height=30px]{figures/X2/Enemies/sprite_Installer.png}}] \hypertarget{enem:Installer}{\textbf{Installer}}:
 	\enemSpecs{7}{Insta-kill (crush)}{Large mobile equipment which perform maintenance in the Computer Center.}
@@ -308,11 +312,16 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\item[{\includegraphics{figures/X1/Enemies/sprite_mettalc15.png}}] \hypertarget{enem:Metall_C-15}{\textbf{Metall C-15}}: 
 	\enemSpecs{2}{2 (contact), 1(bullet)}{Reploid who watches factories. From the former series that worked in factories, now they are advanced enough to be placed as chiefs.}
 	
+	 \hypertarget{enem:Mine_Tortoise}{\textbf{Mine Tortoise}}%TODO ---------------------------------------------
+
 	
 	\item[{\includegraphics[height=30px]{figures/X2/Enemies/sprite_Morgun.png}}] \hypertarget{enem:Morgun}{\textbf{Morgun}}:
 	\enemSpecs{1}{1 (contact), 3 (fireballs)}{Mechaniloid for geological surveying, its body is designed to withstand the heat and pressure of hot magma}
 	
 	\item \hypertarget{enem:Notor_Banger}{\textbf{Notor Banger}}%TODO ---------------------------------------------
+	
+
+	
 	
 	\item[{\includegraphics[height=20px]{figures/X2/Enemies/sprite_pararoid.png}}] \hypertarget{enem:Pararoid_R-5}{\textbf{Pararoid R-5}}:
 	\enemSpecs{2}{2 (contact)}{Pararoid model improved with the ability of flight. It can approach suddenly by dashing at super speed.}
@@ -360,8 +369,7 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\enemSpecs{4}{3 (contact), 2(laser))}{A pathetic upper body of a robot, made to become a car driver. Although it passed part of the humans' expectations, without a driver's license, it has been turned into scrap.}
 	
 	\item[{\includegraphics[height=10px]{figures/X2/Enemies/sprite_scriver.png}}] \hypertarget{enem:Scriver}{\textbf{Scriver}}:
-	\enemSpecs{2}{2 (contact)}{Originally an assembly worker mechaniloid for manufacturing jobs in the 
-		factory, but was later remodeled for attack.}
+	\enemSpecs{2}{2 (contact)}{Originally an assembly worker mechaniloid for manufacturing jobs in the factory, but was later remodeled for attack.}
 	
 	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_seaattacker.png}}] \hypertarget{enem:Sea_Attacker}{\textbf{Sea Attacker}}:
 	\enemSpecs{2}{2 (contact)}{Seahorse-type mechaniloid created as a novelty for humans' homes. Its body somersaults as it charges.}
@@ -384,6 +392,10 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\item[{\includegraphics[height=20px]{figures/X1/Enemies/sprite_snowshooter.png}}] \hypertarget{enem:Snow_Shooter}{\textbf{Snow Shooter}}: 
 	\enemSpecs{4}{3 (contact), 2(snowball)}{Bad-natured mechaniloid who toss balls of white iron as if they were snowballs. They are Chill Penguin's guardians.}
 	
+	\item \hypertarget{enem:Snow_Rider}{\textbf{Snow Rider}}  %TODO ---------------------------------------------
+	\item \hypertarget{enem:Snow_Slider}{\textbf{Snow Slider}} %TODO ---------------------------------------------
+	
+	
 	\item[{\includegraphics[height=30px]{figures/X2/Enemies/sprite_SoleSolar.png}}] \hypertarget{enem:Sole_solar}{\textbf{Sole Solar}}:
 	\enemSpecs{3}{2 (missiles), 5 (laser)}{Artillery robots of the Weather Control Center, which runs off sunlight. There are 2 types. The L type fire lasers, while the M type are equipped with pursuit missiles}
 	
@@ -398,7 +410,6 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	
 	\item \hypertarget{enem:Tombort}{\textbf{Tombort}}%TODO ---------------------------------------------
 	
-	
 	\item[{\includegraphics[height=10px]{figures/X2/Enemies/sprite_TubamailGenerator.png}}] \hypertarget {enem:Tubamail_Generator}{\textbf{Tubamail Generator}}:
 	\enemSpecs{8}{2 (contact)}{Platform which constructs and releases Tubamail-S.}
 	
@@ -409,14 +420,16 @@ while all artworks come from \cite{book:MMX_Complete_art}. In some occasions art
 	\enemSpecs{5}{}{Robot once designed as a sprinkler for domestic use, but was defective until the water was replaced with cannon shells.}
 	
 	\item \hypertarget{enem:Victoroid}{\textbf{Victoroid}} %TODO ---------------------------------------------
+
 	\item \hypertarget{enem:Victoroid_customer}{\textbf{Victoroid customer}}%TODO ---------------------------------------------
+
 	\item \hypertarget{enem:Walk Blaster}{\textbf{Walk Blaster}}%TODO ---------------------------------------------
+	
+	\item \hypertarget{enem:Wall_Cancer}{\textbf{Wall Cancer}} %TODO ---------------------------------------------
+	
 	
 	\item[{\includegraphics[height=20px]{figures/X2/Enemies/sprite_weathercrystal.png}}] \hypertarget{enem:Weather_crystal}{\textbf{Weather Crystal}}:
 	\enemSpecs{22}{-}{Device which creates and maintains the artificial weather inside the Weather Control Center. Because it is such a precision instrument, it has a fault which makes it easily affected by outside stimulus.}
-	
-	
-
 
 	
 \end{itemize}
