--- a/src/vehicles.tex
+++ b/src/vehicles.tex
@@ -17,13 +17,21 @@ A list of all vehicles present in the X series. Artworks from~\cite{book:MMX_Com
 		\caption{Ride Armor 's artwork (with pilot)}
 	\end{figure}
 	
-	\item \hypertarget{vehicle:Ride_Armor_Rabbit}{\textbf{Ride Armor EG-2 custom "\textit{Rabbit}":}}
+	\item \hypertarget{vehicle:Ride_Armor_Rabbit}{\textbf{Ride Armor EG-2 custom ``\textit{Rabbit}'':}}
 	Upgraded version of the original ride armor drove by Vile and X. It is  equipped with drill hands for mine excavation, and jets attached to its back for improved, although limited, flight ability~\cite{wayback:X2_resources}. 
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[width=0.4\linewidth]{figures/X2/Enemies/Ride_armor_RABBIT.png}
 		\caption{Ride Armor RABBIT}
 	\end{figure}
+	
+	\item \hypertarget{vehicle:Ride_Armor_Chimera}{\textbf{Ride Armor type DRA-00 ``\textit{Chimera}'':}}
+	
+	\item \hypertarget{vehicle:Ride_Armor_Frog}{\textbf{Ride Armor ``\textit{Frog}'':}}
+	
+	\item \hypertarget{vehicle:Ride_Armor_Kangaroo}{\textbf{Ride Armor ``\textit{Kangaroo}'':}}
+	
+	\item \hypertarget{vehicle:Ride_Armor_Hawk}{\textbf{Ride Armor ``\textit{Hawk}'':}}
 	
 	\item \hypertarget{vehicle:Ride_Chaser_Cheval}{\textbf{Ride Chaser ADU-T400 turbo "\textit{Cheval}": }}
 	Reploid private air bike. Designed for running at extreme speeds, 
@@ -33,6 +41,10 @@ A list of all vehicles present in the X series. Artworks from~\cite{book:MMX_Com
 		\includegraphics[width=0.4\linewidth]{figures/X2/weapons/RCCheval.png}
 		\caption{Ride Chaser ``Cheval''}
 	\end{figure}
+	
+	
+	
+	
 \end{itemize}
 
 
