--- a/src/x3.tex
+++ b/src/x3.tex
@@ -25,6 +25,8 @@ As the third entry in the series, Mega Man X3 borrows many features from its pre
 	\item Alongside traditional Armor Parts, new Pink capsules can be found too. Such capsules, hidden in stages, contains an upgrade chip for one of X's armor parts and can enhance this upgrade even more. Clearly an upgrade chip can only be obtained if X already possesses the corresponding armor part and, moreover, it is possible to obtain only one upgrade chip throughout the entire game, as the enhancement is permanent and only one can be collected.
 	\item The Ride Chasers are not more present in the game.
 	\item Throughout an option in the pause menu, Zero can become playable, although with some limitations. More information about this feature are given in section~\ref{X3:Zero}
+	\item Nightmare Police challenges: Much similar to the X-Hunters from the previous game, after a certain number of bosses have been defeated the Nightmare police will begin spawning in the stage to challenge X. Differently from the previous game, however, only one boss will spawn at the time, Bit appearing after defeating two bosses and Byte after five. Additionally, purposely avoiding the fight is not possible anymore, as their boss rooms are placed in middle of the stages without any possibility to avoid them. When X enters one of these rooms, the boss fight will trigger randomly each time, and even between two subsequent visit following a defeat
+	\item Vile stage: After the Nightmare Police begins chasing X, in specific stages a teleporter pad will also appears. Such teleporter, once taken, brings X into the Vile stage, where players can challenge Vile himself.
 \end{itemize}
 \section{Weapons}\label{X3:sub_weapon}
 \subsection{\includegraphics[width=12px, height=10px]{figures/X3/weapons/A_burst.jpg} Acid Burst}\label{Acid_Burst}
@@ -254,20 +256,8 @@ The Third armor (also known as Max Armor~\cite{wiki:third_armor}) is composed by
 \begin{itemize}
 	\item Foot parts: Found in 	the Frozen Town Stage, near the end of the large area before the boss' room. This upgrade allows X to regain the air-dash ability in the same way as it was for the second armor. This time however the air dash can also be performed upwards, although with a short delay between the first and second jump. Just like the previous game, X cannot air-dash out of a dash-jump. It is possible, however, perform two upward dash, as it is not required for X to touch the ground before performing a second one.
 	
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[width=.45\linewidth]{figures/X3/Blizzard_buffalo/Armor_1.png}
-		\includegraphics[width=.45\linewidth]{figures/X3/Blizzard_buffalo/Armor_2.png}
-		\caption{Armor Capsule location}
-	\end{figure}
 	
 	\item Body Parts: Just like its predecessor, this part double X's defense by cutting in half all incoming damages. In addition, when X receives damage a blue force field appears around X for a short amount of time, reducing incoming damage for an additional 25\%, for a total damage reduction of 62.5\%. This upgrade is found in Volt Catfish's stage, on the vertical spiked pit after the fourth lift. It requires either a charged Gravity Well to lift the platform or the Foot Part with the upgrade chip (although it is not mandatory as it is possible to reach the upper ledge by combining two well timed upward dash).
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[width=.45\linewidth]{figures/X3/Volt_catfish/Armor_1.png}
-		\includegraphics[width=.45\linewidth]{figures/X3/Volt_catfish/Armor_2.png}
-		\caption{Armor Capsule location}
-	\end{figure}
 	
 	\begin{figure}[htp]
 		\centering
@@ -277,15 +267,7 @@ The Third armor (also known as Max Armor~\cite{wiki:third_armor}) is composed by
 	
 	\item Arm Parts: Increase X's maximum charge level up to four, while also allowing to charge sub-weapons. Similarly to he Second Armor, releasing a fully charged shot will cause X to shoot a single shot, while keeping a second one in store for later. It is also possible to release the second shot immediately after the second, just like in X2, but in this case the two shots instead of moving separately will combine in a single Cross Charged Shot. Although powerful, this attack also comes with some drawbacks, mainly the delay the two shots need to combine and start moving, which can cause to miss some potential opening in the enemies. 
 	Beside the increase in attack power, the Arm Parts also X's to move faster on ladders, as well as cutting the ammo cost for sub-weapon in half, but only when the armor is fully completed. This part can be found in the Safari Park, behind a wall breakable by the Tornado Fang and a pit which requires a double dash to pass on.
-	
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[width=.3\linewidth]{figures/X3/Neon_tiger/Armor_1.png}
-		\includegraphics[width=.3\linewidth]{figures/X3/Neon_tiger/Armor_2.png}
-		\includegraphics[width=.3\linewidth]{figures/X3/Neon_tiger/Armor_3.png}
-		\caption{Armor Capsule location}
-	\end{figure}
-	
+		
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[height=3cm]{figures/X3/weapons/Combo_shot.png}
@@ -293,14 +275,7 @@ The Third armor (also known as Max Armor~\cite{wiki:third_armor}) is composed by
 	\end{figure}
 	
 	\item Head Parts: Found in Tunnel Rhino's stage, in a path opened by a boulder fall after using the charged Triad Thunder. This parts will add a radar to X's equipment which will map the current stage's layout and point out yet-to-discover collectibles, such as other armor capsule, life-up and sub-tanks. The map is displayed only once as soon as X enters a stage, but it requires an input for the player to close, so it can remain on screen for as much as the player wants. Additionally, on the stage selection screen additional information for each stage will be displayed, showing collectibles for each stage and highlighting missed ones.
-	
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[width=.45\linewidth]{figures/X3/Tunnel_rhino/Armor_1.png}
-		\includegraphics[width=.45\linewidth]{figures/X3/Tunnel_rhino/Armor_2.png}
-		\caption{Armor Capsule location}
-	\end{figure}
-	
+		
 	\begin{figure}[htp]
 		\centering
 		\includegraphics[height=3cm]{figures/X3/Blast_hornet/map.png}
@@ -312,49 +287,24 @@ The Third armor (also known as Max Armor~\cite{wiki:third_armor}) is composed by
 As said previously, for each part an upgrade chip can be installed. Hence there are four total chip upgrades, plus a hidden fifth one. the chips are the following:
 \begin{itemize}
 	\item Foot Chip: Found in Toxic Seahorse's stage, on the surface of the big underwater room on the right. It requires either the charged Frost Shield to reach the surface and jump from there or the Frog Ride Armor, to destroy the fans which prevent X to wall jump on the rightmost wall. The Chip allows X to perform a second air dash in any direction, or an air-dash out of a dash-jump.
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[height=3cm]{figures/X3/Toxic_seahorse/Armor_1.png}
-		\includegraphics[height=3cm]{figures/X3/Toxic_seahorse/Armor_2.png}
-		\caption{Foot Chip location}
-	\end{figure}
+
 	\item Body Chip: Increase the power of the force field emitted by the part after receiving a hit. The shield now becomes orange, and cut damages by another 50\%, for a total of 75\% damage reduced. This chip can be found in the Shipyard stage, in a passage down a pit closed by a wall breakable only by using a Ride Armor.
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[height=3cm]{figures/X3/Crush_crawfish/Armor_1.png}
-		\includegraphics[height=3cm]{figures/X3/Crush_crawfish/Armor_2.png}
-		\caption{Body Chip location}
-	\end{figure}
+
 %TODO orange shield
 	\item Arm Chip: Allows the usage of the Hyper Charge, which grants unlimited charged shots as long as there is weapon energy available. The chip is found in Gravity Beetle's stage, at the end of a spiked path blocked by crates breakable only by using a Ride Armor.
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[height=3cm]{figures/X3/Gravity_beetle/Armor_1.png}
-		\includegraphics[height=3cm]{figures/X3/Gravity_beetle/Armor_2.png}
-		\caption{Arm Chip location}
-	\end{figure}
+	
 	\item Head Chip: Enable health regeneration when X stand still. When X remain standing for a while his health will begin to regenerate and the regeneration will continue for as long as he doesn't move. If X is at full health, the regeneration effect will replenish his sub-tanks instead. This chip is found in the Weapons Factory Stage, at top-right side of the area past the elevator, accessible by using the Falcon Module for the Ride Armor.
-	\begin{figure}[htp]
-		\centering
-		\includegraphics[height=3cm]{figures/X3/Blast_hornet/Armor_1.png}
-		\includegraphics[height=3cm]{figures/X3/Blast_hornet/Armor_2.png}
-		\caption{Head Chip location}
-	\end{figure}
-	\item Hyper Chip: Obtainable only if X has obtained all the collectibles and has not installed any other chip. Once obtained, X's armor turns gold and X gets access to all the previous upgrades, with the addition of having an increased health regeneration and a less usage of energy when in Hyper Charge. The capsule for the chip is hidden in Doppler Stage A, in a secret room inside a pit but only if the player reaches it at full health. This upgrade is NOT saved by the password system. 
-	\begin{figure}[htp] %TODO better hyper chip screenshot
-		\centering
-		\includegraphics[height=3cm]{figures/X3/Doppler_stages/Hyper_chip.png}
-		\caption{Hyper Chip location}
-	\end{figure}
+	
+	\item Hyper Chip: Obtainable only if X has obtained all the collectibles and has not installed any other chip. Once obtained, X's armor turns gold and X gets access to all the previous upgrades, with the addition of having an increased health regeneration and a less usage of energy when in Hyper Charge. The capsule for the chip is hidden in Doppler Stage A, in a secret room inside a pit but only if the player reaches it at full health. This upgrade is NOT saved by the password system.
+	%TODO better hyper chip screenshot 
 \end{itemize}
-
 The last upgrade X can obtain is the beam saber. This upgrade can be obtained independently from the armor's status, as the actions required to obtain it can be done even by regular X. However obtaining this upgrade while also having the Arm Parts will increase its power.
 
 The path which leads to obtain the Beam Saber is rather straightforward, and obtainable with the following steps:
-\begin{itemize}
+\begin{enumerate}
 	\item Find and defeat Vile mk.II using one of his weakness, killing him in the process.
 	\item By killing Vile, the Doppler Stage B will change accordingly. In the new path X will find the sub-boss  \hyperlink{miniboss:Mosquittus}{Mosquittus}. This is the only sub-boss Zero can fight and, upon defeating it, the boss will self-destruct after trapping Zero. This will cause Zero to be seriously damaged (preventing him to be called again) but in exchange he will give X his Beam Saber.
-\end{itemize} 
+\end{enumerate} 
 The Beam Saber gives X another level in his charge shot, which turns green. Upon releasing the fire button, X will swing the beam saber dealing massive damage to every enemy he hits with it. If X is equipped with the Arm Part, the saber will also produce a shockwave which travels forward, and upon making contact with an enemy will not only deal heavy damages to the target, but also produce three more slashes which will deal even more damage over time. In particular, hitting any enemy with the saber itself will deal 30 damage per frame to all enemies whereas a fully charged saber will deal a total of 98 damages. When fighting bosses, the regular saber will deal 16 damages (half health bar), while de shockwave will deal 8 damages, followed by three slashes which deals 4 damages each, dealing in total 20 damages.
 
 \begin{figure}[htp] 
@@ -401,6 +351,17 @@ Generally speaking, Zero plays similarly to X, but sacrificing defenses for more
 	\caption{Zero's charged shots levels.}
 \end{figure}
 
+\section{Ride Armors}
+A mechanic so far unique to this game is the possibility to unlock and use different types of Ride Armor by summoning them from specific pedestals, known as \textit{Robot Ride platform}~\cite{X3:Manual}. From this devices, X can summon any of the already unlocked armors for his own use. Zero however is completely prevented from using them
+
+There are a total of four different type of Ride Armor, which consists in a base form plus three modules to change its form:
+\begin{itemize}
+	\item \hyperlink{vehicle:Ride_Armor_Chimera}{Chimera Ride Armor}: The base form of the Ride Armor, which behaves similarly to the one from the first installment of the game. It can punch, jump and dash forward. Being the template for all other types, it is mandatory to obtain this model first, by recovering it from Blast's Hornet stage.
+	\item \hyperlink{vehicle:Ride_Armor_Kangaroo}{Kangaroo Ride Armor}: Model designed for combat, similar to the Rabbit model from the previous game.  Equipped with spinning claws, it deals more damage than the Chimera Model, while also being capable of performing a  charged attack which releases a long-ranged spiked fist with a chain attached.
+	\item \hyperlink{vehicle:Ride_Armor_Hawk}{Hawk Ride Armor}: Model designed for flight, is equipped with a pair of Vernier thruster which allows it to hover and slowly gain height for few seconds if the jump button is kept pressed. Differently from the other versions, this is equipped with a pair of rocket launcher for long-ranged attack.
+	\item \hyperlink{vehicle:Ride_Armor_Frog}{Frog Ride Armor}: Ride Armor specialized in underwater combat. While on land this Ride Armor is very lacking, as it can only proceed by hopping forward with short hops (normal walk) or long jumps (dash) and even its fighting capabilities are severally reduced, as the missiles it propels from his cannons curve down. The situation changes when the armor reaches the water. While underwater, in fact, its jump are much higher and is possible even to concatenate up to six~\cite{wiki:Chimera_Armor} jumps. Moreover the torpedo it shoots gain homing capabilities. Finally, it is important to note that this is the only type of armor capable to move underwater, as all the other sinks and become unusable.
+\end{itemize}
+
 \section{Opening Stage: Hunter Base}\label{X3:intro_stage}
 Few hours after X and Zero are dispatched to Doppler Town, dr.~Doppler's army attack directly the Maverick Hunters HQ, forcing the two to quickly retreat to defend their base, which became the first stage of the game. The stage itself is rather straightforward, as its focus on reintroducing the core mechanics of the series. At about one third of the stage X will meet with Mac, a former Maverick Hunter now member of Doppler's army, which betrays captures X. At this point the game introduces for the first time the Zero Change, forcing the player to take control of Zero for the remaining of the stage. Near the stage's end the player will find Mac as a sub-boss, but it can be easily destroyed thanks to Zero's firepower. Once destroyed Mac and freed X, the player will regain control of the latter, to reach the end of the stage and face the boss, Mao the Giant.
 
@@ -445,7 +406,7 @@ After defeating this stage two main changes will trigger: All metal crates in Gr
 The Head Chip power-up is hidden in the first conveyor belt room, in the top-right corner. It is, however, protected by a wall covered in spikes which can only be bypassed by using the Leg parts or the dash of the Hawk Ride Armor, which can be summoned earlier in the stage.
 
 \subsection{Ride Armor Chimera}
-In the outside section by dropping down the roof after destroying the boxes on the platform connecting the first roof with the second, it is possible to note that all walls of the warehouses are cracked. It such walls are hit with the Tornado Fang they will break and open a new passage. In particular, in the second warehouse there is a box that, once destroyed, will open an underground path that leads to the ride armor, imprisoned by an \hyperlink{enem:Hangerter}Hangerter. Destroying such enemy will free the armor, which will become usable immediately
+In the outside section by dropping down the roof after destroying the boxes on the platform connecting the first roof with the second, it is possible to note that all walls of the warehouses are cracked. It such walls are hit with the Tornado Fang they will break and open a new passage. In particular, in the second warehouse there is a box that, once destroyed, will open an underground path that leads to the ride armor, imprisoned by an \hyperlink{enem:Hangerter}{Hangerter}. Destroying such enemy will free the \hyperlink{vehicle:Ride_Armor_Chimera}{armor}, which will become usable immediately
 
 \subsection{Heart Tank}
 The Heart Tank is hidden at the end of the outside area, in the top right corner of the map. To reach it it is necessary use the Ride Armor to jump out of it while in midair, to let X gain enough height to reach the upper wall and beginning to wall-jump.
@@ -459,12 +420,163 @@ There are two main strategies to deal with Blast Hornet, depending on whether th
 
 According to data available~\cite{wayback:X3_resources}, Blast Hornet is 242 cm tall, weights 65 Kg, has a power of 3400 rp and a speed of 8600 rp. Upon defeating him X will gain access to the Parasitic Bomb~\ref{Parasitic_Bomb}.
 
+
+\begin{table}[htp]
+	\centering
+	\begin{tabular}[h]{l c}
+		\toprule
+		Health  & 32\\
+		\midrule
+		\multicolumn{1}{c}{Attack} & \multicolumn{1}{c}{Damage}\\
+		Contact & 3\\
+		Mini Bee & 2\\
+		Stinger& 8\\
+		Search& 2\\
+		\bottomrule
+	\end{tabular}
+	\caption{Blast Hornet's attack's damages~\cite{wiki:wire_sponge}}
+\end{table}
+
 \section{Frozen Town}
+The second stage of the game is known as Frozen Town, which, as implied by its name, revolves around ice. This stage can be divided into three primary areas: the initial section, which extends from the starting point to a nearby cave encased in ice; the second section takes place within a frozen underground passage, and the final section occurs outdoors during a snowstorm. A common feature across these areas is the presence of a permanently frozen surface, making traversal challenging. This surface partially hinders X's ability to dash and causes him to slide, often towards a pit of spikes. If players ventures this stage after defeating Volt Catfish, they will find it easier since Catfish's defeat will illuminate the first two portions of the stage, melting the ice.
+
+In the initial section, the primary hazard arises from ice spikes positioned at the end of frozen slopes. This combination is lethal, as X will uncontrollably slide towards the spikes if not managed properly. Fortunately, near the beginning, a Ride Armor pedestal can be found, allowing players to summon a Ride Armor to navigate the remaining portion without fear of the spikes. However, it's not possible to retain the armor for an extended period, as it cannot access the final part of this section.
+
+The second section of the stage takes place in an underground passage. After an initial straightforward segment, which leads to the Nightmare Police room, the stage becomes darker, reducing X's visibility. In addition to the hazards shared with the preceding section, falling \hyperlink{Ice_De_Voux}{Ice De Voux}  will also pose a threat to X, especially since they can be challenging to deal with and respawn quickly as soon as X moves away.
+
+The concluding section of the stage once again occurs outdoors. A snowstorm will blow, impeding X's movement. The storm can be halted by destroying the machine generating it but,  in doing so, players will also eliminate the only means of accessing the upper path, which is necessary to collect the two collectibles found in this area. After passing through this final section, only one corridor remains before X confronts the boss.
+
+This stage houses following enemies~\cite{wiki:Frozen_Town}:
+\begin{itemize}
+	\item \hyperlink{enem:Helit}{Helit}
+	\item \hyperlink{enem:Ice_De_Voux}{Ice De Voux} 
+	\item \hyperlink{enem:Notor_Banger}{Notor Banger} 
+	\item \hyperlink{enem:Snow_Rider}{Snow Rider} 
+	\item \hyperlink{enem:Snow_Slider}{Snow Slider}
+\end{itemize}
+
+\subsection{Heart Tank}
+Immediately following the platform which summons the Ride Armors, players will notice some suspicious big cubes made of darker ice. By destroying them with a Ride Armor or the Tornado Fang sub-weapon, X will unlock a new path leading to the Heart Tank. Using the Ride Armor is preferable, as the path leading to the collectible is filled with spikes.
+
+\subsection{Sub Tank}
+At the very beginning of the last area, where the snowstorm storms. The collectible is placed on a high platform extending from the leftmost wall, but impossible to reach from below, safe for some pixel-perfect jumps. The intended way to reach the Sub Tank is by using the dash provided by the foot parts, that can be  coincidentally found in the same area of the stage.
+
+\subsection{Foot Parts}
+The armor capsule is found again in the last area. If X manage to remain on the upper path, from its end he can dash-jump over the gap to reach a platform extending from the rightmost wall, above the boss' door, and from there follow the path to the capsule. Should players miss the jump, they will simply fall on the lower path and will be able to try again be re-climbing up using the vortex generating the snowstorm, provided the machine has not been already destroyed.
+
+\subsection{Blizzard Buffalo}\label{boss:Blizzard_buffalo}
+Once a benevolent soul driven by a passion for crafting ice sculptures~\cite{Xcoll1:Manual_X3}, Blizzard Buffalo, also known as the \textit{Silver Snowman}~\cite{book:MMX_Complete_art}, was a reploid designed to operate in cold weather, ensuring safety at the ski resort where he was employed\cite{wayback:X3_resources,wiki:Blizzard_buffalo}. However, at a certain point, he relocated to Doppler Town, where he became entangled in Doppler's scheme and succumbed to corruption by the Sigma Virus. This transformation rendered him highly aggressive, resulting in the freezing of a portion of the city. Eventually, he was mercifully put down by the hand of X.
+
+Engaging in battle with Blizzard Buffalo is not particularly challenging. The primary difficulty arises from the expansive arena, which can obscure Buffalo's attacks if executed from off-screen, catching the player off guard. Blizzard Buffalo employs only three main attacks: Charge, Ice Bullet, and Freeze Beam~\cite{book:Compendium}. During his charge attack, Buffalo propels himself toward X at a moderate speed. Upon contact, he attempts to trap X between his horns and slam him into the wall. This attack is easily evaded, as X can outpace Buffalo by dashing and utilize the walls for wall-jumping above him. In his second attack, Buffalo hurls three snowballs at X, which, upon impact with a surface, transform into ice spikes. X can skillfully evade this assault by maintaining constant movement, and the spikes can be neutralized by firing at them. Finally, when Buffalo is low on health, he resorts to his Freeze Beam, an extensive beam that covers the entirety of the arena in length and a good portion in height, capable of immobilizing X. However, this attack inflicts no damage to X himself, but rather exposes to a subsequent strike from the boss.
+
+While battling Blizzard Buffalo conventionally may offer some degree of challenge, particularly since his primary vulnerability, the Parasitic Bomb, lacks additional effects, skilled players can exploit Buffalo's flawed AI to completely break the fight. The steps to exploit this vulnerability are as follows:
+\begin{enumerate}
+	\item Immediately at the beginning of the battle, execute a wall jump above Buffalo, who will promptly initiate a charge.
+	\item Once positioned behind Buffalo, remain stationary.
+	\item As soon as Buffalo turns to face X, perform a jump. This action prompts Buffalo to pivot once more and ram with the wall.
+	\item Repeat this sequence, striking the boss while he charges towards the wall.
+\end{enumerate}
+As demonstrated, executing these steps allows for a complete disruption of the boss battle, facilitating an effortless victory.
+
+As per the provided data~\cite{wayback:X3_resources}, Blizzard Buffalo weighs 3000 kilograms, stands at a height of 310 centimeters, possesses a power level of 9200 rp, and boasts a speed level of 3200 rp. Upon defeated, X will include the Frost Shield~\ref{Frost_Shield} in his arsenal
+
+\begin{table}[htp]
+	\centering
+	\begin{tabular}[h]{l c}
+		\toprule
+		Health  & 32\\
+		\midrule
+		\multicolumn{1}{c}{Attack} & \multicolumn{1}{c}{Damage}\\
+		Contact & 5\\
+		Charge & 5\\
+		Ice Bullet& 3\\
+		Freeze Beam& 0\\
+		\bottomrule
+	\end{tabular}
+	\caption{Blast Hornet's attack's damages~\cite{wiki:wire_sponge}}
+\end{table} 
+
 \section{Airborne Aircraft Carrier}
+The Airborne Aircraft Carrier is probably one of the largest stages in the game and serves as the lair of Gravity Beetle.
+%TODO DIFFERENZE STAGE
+The stage can be divided into three primary sections. In the initial section, X enters the carrier through the cargo area, which may be filled with crates obstructing certain paths or not, depending on whether Blast Hornet has been defeated. Additionally, the types of enemies encountered here changes depending on the same condition. To progress, X must reach the far-right wall, where ladders enable further movement. At the conclusion of this section lies a sub-boss door, potentially leading to a confrontation with Bit or Byte if they are in pursuit of X.
+
+The second segment of the stage predominantly unfolds outside the carrier, with nothing particularly noteworthy aside from some encountered enemies. This portion culminates with X re-entering the colossal airship via an ascending elevator, with enemies positioned to attack X from both sides.
+
+Lastly, the concluding part of the stage takes place within what can be depicted as an ammunition storage area. Immediately following the elevator, players will find a Ride Armor platform, facilitating travel in the subsequent segment. Here, the floor primarily consists of what can be assumed to be giant shells, which fall as soon as X steps on them, necessitating swift traversal to avoid falling. Beyond this area, X arrives at a wall seemingly impeding the armor's progress. However, with precise platforming, it is possible to ascend while retaining it. From this vantage point, only a narrow corridor and another ascent (this time impossible for the armor) separate X from the boss door.
+
+Following enemies populate the stage~\cite{wiki:Airborne_carrier}: 
+\begin{itemize}
+	\item \hyperlink{enem:Blady}{Blady} 
+	\item \hyperlink{enem:Earth_Commander}{Earth Commander}
+	\item \hyperlink{enem:Head_Gunner_customer}{Head Gunner customer} (before completing Blast Hornet's the stage)
+	\item \hyperlink{enem:Head_Gunner_masspro}{Head Gunner masspro} (after completing Blast Hornet's  stage)
+	\item \hyperlink{enem:Notor_Banger}{Notor Banger}
+	\item \hyperlink{enem:Wall_Cancer}{Wall Cancer}
+\end{itemize}
+\subsection{Heart Tank}
+The Heart Tank can be found immediately in the cargo area, specifically in the top-right corner of the map. However, if Blast Hornet has not been defeated, the path will be blocked by an indestructible crate.
+
+\subsection{Change F}
+The upgrade to change the Ride Armor to its \hyperlink{vehicle:Ride_Armor_Frog}{Frog} version can be found in the outside section of the stage. On top of of a platform immediately above the ladder which bring X outside, it can only be reached with an upward dash from the Foot Parts.
+
+\subsection{Armor Chip Capsule}
+Immediately before the last climb to the boss room, players can find two crates piled to block the path. If players manage to bring here the Ride Armor, they will be able to destroy such block and proceed to the right, over a spiked floor to reach the capsule containing the Body Chip.
+
+
+\subsection{Gravity Beetle}\label{boss:Gravity_beetle}
+ Once a devoted member of the 17th Elite Unit of the Maverick Hunters, Gravity Beetle's life took a dramatic turn during the initial Maverick uprising when his brother and fellow comrade, Boomer Kuwanger~\ref{boss:Boomer_kuwanger}, was slain by the hand of X. The exact nature of their relationship remains unclear: in~\cite{book:Compendium}, he is described as the younger sibling, in~\cite{wayback:X3_resources}, he is portrayed as the elder, and in~\cite{Xcoll1:Manual_X3}, there is no mention of them being related at all. Seeking retribution for his brother, an act that earned him the title of \textit{Steel Revenger}\cite{book:MMX_Complete_art}, Beetle deserted the Maverick Hunters and disappeared, only to later align himself with Doppler's rebellion. He hijacked a transport unit from the Maverick Hunter HQ and converted it into an airborne fortress, employing it to launch aerial assaults and transport weapon supplies\cite{Xcoll1:Manual_X3,wayback:X3_resources,wiki:Gravity_beetle}.
+ 
+ Initially, battling against Gravity Beetle may appear straightforward, given the boss's slow movement and limited arsenal of three attacks, all of which are reasonably avoidable. However, the true challenge lies in the potency of these strikes. Among the eight primary bosses, his assaults inflict the most amount damages, making even a few hits potentially lethal.
+ 
+ Gravity Beetle relies on three primary attacks. The first, known as the Gravity Well (or Bug Hole in Japanese~\cite{wiki:Gravity_beetle}), involves Beetle launching two black holes—one towards X and another above him. These projectiles rebound off walls, increasing in size with each bounce, up to a maximum of three times. Additionally, when Beetle's health is low, he employs an enhanced version of this weapon, summoning a large stationary black hole at the center of the arena. This augments his jumping capability and poses a threat to X upon contact. Beetle also possesses a Charge Attack~\cite{book:Compendium}: after becoming invulnerable, he charges towards X in an attempt to strike him. If successful, X is propelled upwards in a manner reminiscent of Boomer Kuwanger's Death Lift.
+ 
+ Gravity Beetle's vulnerability lies in the Ray Splasher, a weapon that momentarily stuns him while dealing increased damage. However, this armament confers no additional advantages. According to available data~\cite{wayback:X3_resources}, Gravity Beetle weighs 350 kilograms, stands at a height of 225 centimeters including his horns, boasts a power level of 6200 rp, and exhibits a speed level of 3600 rp. Upon defeat, X acquires the Gravity Well~(\ref{Gravity_Well}) for his arsenal.
+ 
 \section{Giant Dam}
-\section{Power Control Center}
-\section{Shipyard}
+The Giant Dam Stage serves as the underwater level in the game. Within this stage, X must traverse from one side of the dam to the other, passing through both the inside and the outside.
+
+The initial segment of the stage guides X from the dam's lower levels to the outdoors, necessitating wall-climbing while water flows in the opposite direction. At the conclusion of this section lies a boss chamber, where encounters with Bit or Byte are possible.
+
+The subsequent section of the stage is entirely submerged. Right at the outset, players are presented with a Robot Ride Platform, allowing for the summoning of a Ride Armor. It is worth noting, however, that any armor aside from the Frog Change will succumb to damage once submerged. This section offers two primary routes: the upper path is relatively less perilous, though it culminates in fans that exert a backward force on X if he lacks the armor, making impossible to proceed. Conversely, the lower path is more hazardous, filled with gaps and spikes along the ceiling. Both paths eventually converge, leading to a door that grants access to the \hyperlink{miniboss:Hotareeca}{Hotareeca} miniboss. This sub-boss poses a relatively moderate challenge, employing homing missiles and deploying mines as its sole modes of attack.
+
+Beyond this segment, the final stretch unfurls. Here, X must ascend to reach the exterior, traverse the dam's upper expanse while evading gaps, and descend into the subsequent structure, where the boss awaits.
+
+These enemies occupy the stage:
+\begin{itemize}
+	
+
+
+\item \hyperlink{miniboss:Hotareeca}{Hotareeca}
+\item \hyperlink{enem:Caterkiller}{Caterkiller}
+\item \hyperlink{enem:Earth_Commander}{Earth Commander}
+\item \hyperlink{enem:Head_Gunner_customer}{Head Gunner customer} / \hyperlink{enem:Head_Gunner_masspro}{Head Gunner masspro} (if Blast Hornet is defeated) 
+\item \hyperlink{enem:Mine_Tortoise}{Mine Tortoise}
+\item \hyperlink{enem:Notor_Banger}{Notor Banger}
+\item \hyperlink{enem:Victoroid}{Victoroid}
+\end{itemize}
+
+\subsection{Heart Tank}
+The Heart Tank is found at the very beginning of the stage. During the ascend with water flowing the opposite direction, if players keep climbing above the door leading to Bit/Byte, they will reach an upper platform with the Heart Tank in plain sight.
+
+\subsection{Change K}
+The Change K lies on a platform above the water in the big underwater section. To get it, X has first to reach the surface of the water, either by using a charged Frost Shield or by destroying the fans at the far right using Frog change's torpedoes and climbing th wall. In any case, one on top, X has to jump on the water's surface to reach the upper left corner, where the collectible can be found. In doing this operation it is vital to minimize the number of \hyperlink{enem:Mine_Tortoise}{Mine Tortoise} defeated as their shell will float towards the surface, hindering X's movement.
+
+\subsection{Foot Chip Capsule}
+The pink capsule hiding the Foot Chip is found in a mirrored position respect to the Change K. X has, in fact, to reach the water's surface and go right to reach an entrance in the wall leading to the capsule.
+
+\subsection{Toxic Seahorse}\label{boss:Toxic_seahorse}
+Toxic Seahorse was a clandestinely developed reploid, distinguished by the unique feature of possessing a body composed of a liquid metal alloy. This attribute affords him the capability to manipulate his form and seamlessly blend into his surroundings~\cite{wiki:Toxic_seahorse,wayback:X3_resources}. Acting on Doppler's directives, Seahorse assumed control of the Monarch Dam, the largest dam in Doppler Town, with the intent of severing the city's water supply.
+
+In battle, Toxic Seahorse follows a fairly predictable pattern. He frequently executes back-and-forth jumps, occasionally punctuating these movements with one of three attacks. His initial maneuver, the Acid Burst, sees Seahorse propelling an acid projectile towards X, which then rebounds upward towards the ceiling. X can eliminate the projectile by firing at it, and with each bounce, it releases two droplets of acid. The second attack at Seahorse's disposal is his liquefy ability, which makes him invincible as he blends with the ground, only to swiftly reappear beneath X moments later. Finally, when his health falls below half, Seahorse employs the Bouncing Acid Ball. This move closely resembles the Acid Burst, but Seahorse releases two acid projectiles that bounce along the ground in pursuit of the player, and are impervious to destruction.
+
+While engaging Seahorse conventionally with the X-buster or even employing his vulnerability, the Frost Shield, may present a degree of challenge to players, it is also possible to exploit a glitch in Seahorse's invincibility frame system, potentially culminating in the boss being defeated in just two cycles. Executing this glitch necessitates striking Seahorse at the apex of his jump, followed by sustained close-range deployment of Frost Shields, capitalizing on the 20-frame window during his stunned animation wherein his invincibility frames are momentarily inactive. A practical tutorial is accessible in~\cite{video:seahorse_two_cicle}. Naturally, by employing this glitch, the fight's difficulty is significantly diminished.
+
+Based on available information, Toxic Seahorse has a weight of 87 kilograms, stands at a height ranging from 200 to 350 centimeters, possesses a power level of 5800 rp, and exhibits a speed level of 4300 rp. Upon his defeat, X integrates the Acid Burst~\ref{Acid_Burst} into his arsenal.
+
 \section{Quarry}
+
+
 \section{Safari Park}
 
 \section{Doppler Stage 1}
